Fixied scrollbar functionality

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -95,18 +95,35 @@
   border: none;
 }
 
-
-
-
 /* Site sidenav content */
 .site-sidenav {
   width: 200px;
 }
-.sidenav-content{
-  overflow: hidden;
-}
 /* Site main content display */
 .site-content {
+  padding-top: 64px;
   height: 100vh;
 }
 
+/*Scroll Design*/
+
+.sidenav-content::-webkit-scrollbar-track
+{
+  position: relative;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	border-radius: 10px;
+	background-color: #F5F5F5;
+}
+
+.sidenav-content::-webkit-scrollbar
+{
+	width: 12px;
+	background-color: #F5F5F5;
+}
+
+.sidenav-content::-webkit-scrollbar-thumb
+{
+	border-radius: 5px;
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+	background-color: #555;
+}
